--- a/login.html
+++ b/login.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"/>
 
-    <link rel="icon" href="./assets/img/mts ico.png">
-    <link rel="stylesheet" href="./assets/css/cadastro.css">
+      <link rel="icon" href="./assets/img/mts ico.png">
+      <link rel="stylesheet" href="./assets/css/cadastro.css">
 
 </head>
 <body>
@@ -22,16 +22,7 @@
     </header>
 
     <div class="container">
-        <h1>Cadastrar</h1>
-
-        <div class="new-task-container">
-            <input
-                type="text"
-                id="nome-input"
-                class="new-task-input"
-                placeholder="Insira o seu nome completo..."
-            />
-        </div>
+        <h1>Login</h1>
 
         <div class="new-task-container">
             <input
@@ -47,16 +38,16 @@
                 type="password"
                 id="senha-input"
                 class="new-task-input"
-                placeholder="Defina a sua senha..."
+                placeholder="Insira a sua senha..."
             />
         </div>
 
-        <button id="cadastro-link" class="new-task-button" onclick="cadastrar()">Cadastrar</button>
+        <button id="cadastro-link" class="new-task-button" onclick="login()">Entrar</button>
 
     </div>
 
     <script src="https://kit.fontawesome.com/f9e19193d6.js" crossorigin="anonymous"></script>
    
-<script src="./assets/js/cadastro.js"></script>
+    <script src="./assets/js/cadastro.js"></script>
 </body>
 </html>
